--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teste-rocky",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.html",
   "scripts": {
@@ -10,7 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/vkhydra/teste-rocky.git"
   },
-  "keywords": ["Rocky"],
+  "keywords": [
+    "Rocky"
+  ],
   "author": "Victor Bruno Kulessa",
   "license": "ISC",
   "bugs": {
